tests/fixtures/errors/e0410_negative_width.mimz
// expect: E0410
const W: int = 0 - 4
module M {
  out y: bits[W]
  y = 0
}
